EVA-67 Fix: Se corrige el error que no permitia filtrar los eventos desencadenadores

--- a/Notificaciones/templates/Notificaciones/AsignacionNotificaciones/asignacion.html
+++ b/Notificaciones/templates/Notificaciones/AsignacionNotificaciones/asignacion.html
@@ -46,7 +46,7 @@
                                         <div class="form-row p-t-10">
                                             <div class="col-xl-12">
                                                 <div class="border-faded bg-faded p-3 mb-g d-flex">
-                                                    <input type="text" id="js-filter-contacts" class="form-control shadow-inset-2 form-control-lg" placeholder="Filtrar Desencadenadores">
+                                                    <input type="text" id="js-filter-general" class="form-control shadow-inset-2 form-control-lg" placeholder="Filtrar Desencadenadores">
                                                     <div class="btn-group btn-group-lg btn-group-toggle hidden-lg-down ml-3" data-toggle="buttons">
                                                         <label class="btn btn-default active">
                                                             <input type="radio" name="filtro-general" id="grid" checked="" value="grid"><i class="fas fa-table"></i>
