--- a/EVA/templates/EVA/_common/header.html
+++ b/EVA/templates/EVA/_common/header.html
@@ -59,7 +59,7 @@
                         <a class="nav-link px-4 fs-md js-waves-on fw-500" data-toggle="tab" href="#tab-messages" data-i18n="dropdown.messages">Notificaciones</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 fs-md js-waves-on fw-500" data-toggle="tab" href="#tab-feeds" data-i18n="dropdown.settings">Configuraciones</a>
+                        <a class="nav-link px-4 fs-md js-waves-on fw-500" data-toggle="tab" href="#tab-settings" data-i18n="dropdown.settings">Configuraciones</a>
                     </li>
                 </ul>
                 <div class="tab-content tab-notification">
@@ -81,14 +81,14 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="tab-pane" id="tab-feeds" role="tabpanel">
+                    <div class="tab-pane" id="tab-settings" role="tabpanel">
                         <div class="custom-scroll h-100">
                             <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 100%;">
                                 <ul class="notification" style="overflow: hidden; width: auto; height: 100%;">
                                     <li>
                                         <div class="d-flex align-items-center ">
                                             <span class="d-flex flex-column flex-1">
-                                                <a class="dropdown-item" href="{% url 'Notificaciones:notificaciones-seleccion-email' request.user.id %}">Seleccionar notificaciones por correo</a>
+                                                <a class="dropdown-item" href="{% url 'Notificaciones:notificaciones-seleccion-email' request.user.id %}"><strong style="size: 20px">Seleccionar notificaciones por correo</strong></a>
                                             </span>
                                         </div>
                                     </li>
