--- a/Administracion/templates/Administracion/Autenticacion/password_reset_confirm.html
+++ b/Administracion/templates/Administracion/Autenticacion/password_reset_confirm.html
@@ -43,7 +43,7 @@
                         {% else %}
                             <h1 style="text-align: center">Se ha presentado un error.</h1>
                             <p style="text-align: center">El enlace para el cambio de contraseña no es válido, posiblemente ya fue usado. <br />
-                                Por favor comuníquese con Arios Ingeniería SAS.</p>
+                                Por favor comuníquese con el administrador de EVA.</p>
                         {% endif %}
                     </div>
                 </div>
