--- a/Notificaciones/templates/Notificaciones/CorreoElectronico/correo.html
+++ b/Notificaciones/templates/Notificaciones/CorreoElectronico/correo.html
@@ -17,7 +17,7 @@ Enlaces para acceder a la aplicación EVA:
 {% endif %}
 </div>
 <br>
-<i>*** Si al hacer clic no se abre el enlace, por favor, cópielo y péguelo en su navegador favorito.
+<i>*** Si al hacer clic no no funciona, por favor, copia y pega la URL en tu navegador favorito.
     <br><br>
     <div style="background-color: #f9f9f9; text-align:center; font-family:'Lato','Helvetica Neue',Helvetica,Arial,sans-serif; padding:10px 5px; font-size:12px; line-height:1.2; color:#666666">
     &nbsp;Por favor no responda este correo. Este buzón de mensajes no esta monitoreado y no recibirá ninguna respuesta. </div>
