fix: Se corrige título de la funcionalidad de selección  de notificaciones por correo electrónico.

--- a/Notificaciones/templates/Notificaciones/AsignacionSeleccion/asignacion-seleccion.html
+++ b/Notificaciones/templates/Notificaciones/AsignacionSeleccion/asignacion-seleccion.html
@@ -16,7 +16,7 @@
                 {% if opcion == 'asignacion' %}
                     <i class='far fa-bell'></i> Asignar Notificaciones A:  {{ colaborador.nombre }} <span class='fw-300'></span>
                 {% else %}
-                    <i class='far fa-bell'></i> Selección de Notificaciones Por Correo Electrónico <span class='fw-300'></span>
+                    <i class='far fa-bell'></i> Selección de Notificaciones por Correo Electrónico <span class='fw-300'></span>
                 {% endif %}
                 <br>
                 <br>
