--- a/SGI/templates/SGI/documentos/index.html
+++ b/SGI/templates/SGI/documentos/index.html
@@ -43,26 +43,32 @@
                                                     {% if documento.grupo_documento_id == grupo_documento.id %}
                                                         <li style="display: none">
                                                             <div class="row" style="padding-left: 12px">
-                                                                <div class="">
+                                                                <div class="" style="width: 500px">
                                                                     <div id="panel-1" class="panel">
                                                                         <div class="panel-container show">
                                                                             <div class="panel-content">
-                                                                                {{ documento }}
-                                                                                {%  if perms.SGI.view_archivo %}
-                                                                                <a class="far fa-custom fa-eye" style="padding-left: 10px; text-decoration: none !important;" {% for archivo in archivos %}{% if documento == archivo.documento %}href="{% url 'sgi:documentos-ver' archivo.id  %}" target="_blank" data-original-title="Ver" {% endif %}{% endfor %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
-                                                                                {% endif %}
-                                                                                {%  if perms.SGI.view_documento %}
-                                                                                <a class="far fa-custom fa-list-alt" style="padding-left: 10px"  data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Historial (Funcionalidad en Desarrollo)"></a>
-                                                                                {% endif %}
-                                                                                {% if perms.SGI.add_archivo %}
-                                                                                <a class="far fa-custom fa-long-arrow-alt-up" style="padding-left: 10px"  href="javascript:abrir_modal_cargar('{% url 'sgi:documentos-cargar' proceso.id  grupo_documento.id documento.id %}');" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Cargar"></a>
-                                                                                {% endif %}
-                                                                                {% if perms.SGI.change_documento %}
-                                                                                <a class="far fa-custom fa-edit" style="padding-left: 10px"  href="{% url 'sgi:documentos-editar' proceso.id  grupo_documento.id documento.id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
-                                                                                {% endif %}
-                                                                                {% if perms.SGI.delete_documento %}
-                                                                                <a class="far fa-custom fa-trash-alt color-danger-900" style="padding-left: 10px"  id="eliminar_{{ documento.id }}" href="javascript:void(0);"  onclick="fConfirmarEliminar({{ documento.id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
-                                                                                {% endif %}
+                                                                                <div class="row">
+                                                                                    <div class="col-md-8">
+                                                                                    {{ documento }}
+                                                                                    </div>
+                                                                                    <div class="col-md-4" style="padding: 0px">
+                                                                                        {%  if perms.SGI.view_archivo %}
+                                                                                        <a class="far fa-custom fa-eye" style="padding-left: 10px; text-decoration: none !important;" {% for archivo in archivos %}{% if documento == archivo.documento %}href="{% url 'sgi:documentos-ver' archivo.id  %}" target="_blank" data-original-title="Ver" {% endif %}{% endfor %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
+                                                                                        {% endif %}
+                                                                                        {%  if perms.SGI.view_documento %}
+                                                                                        <a class="far fa-custom fa-list-alt" style="padding-left: 10px"  data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Historial (Funcionalidad en Desarrollo)"></a>
+                                                                                        {% endif %}
+                                                                                        {% if perms.SGI.add_archivo %}
+                                                                                        <a class="far fa-custom fa-long-arrow-alt-up" style="padding-left: 10px"  href="javascript:abrir_modal_cargar('{% url 'sgi:documentos-cargar' proceso.id  grupo_documento.id documento.id %}');" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Cargar"></a>
+                                                                                        {% endif %}
+                                                                                        {% if perms.SGI.change_documento %}
+                                                                                        <a class="far fa-custom fa-edit" style="padding-left: 10px"  href="{% url 'sgi:documentos-editar' proceso.id  grupo_documento.id documento.id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
+                                                                                        {% endif %}
+                                                                                        {% if perms.SGI.delete_documento %}
+                                                                                        <a class="far fa-custom fa-trash-alt color-danger-900" style="padding-left: 10px" id="eliminar_{{ documento.id }}" href="javascript:void(0);"  onclick="fConfirmarEliminar({{ documento.id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
+                                                                                        {% endif %}
+                                                                                    </div>
+                                                                                </div>
                                                                             </div>
                                                                         </div>
                                                                     </div>
