--- a/SGI/templates/SGI/documentos/index.html
+++ b/SGI/templates/SGI/documentos/index.html
@@ -43,9 +43,9 @@
                                                     {% if documento.grupo_documento_id == grupo_documento.id %}
                                                         <li style="display: none">
                                                             <div class="row" style="padding-left: 12px">
-                                                                <div class="" style="width: 500px">
-                                                                    <div id="panel-1" class="panel">
-                                                                        <div class="panel-container show">
+                                                                <div>
+                                                                    <div id="panel-1" class="panel" style="display: table-header-group;">
+                                                                        <div class="panel-container show" style="width: 500px">
                                                                             <div class="panel-content">
                                                                                 <div class="row">
                                                                                     <div class="col-md-8">
@@ -56,7 +56,7 @@
                                                                                         <a class="far fa-custom fa-eye" style="padding-left: 10px; text-decoration: none !important;" {% for archivo in archivos %}{% if documento == archivo.documento %}href="{% url 'sgi:documentos-ver' archivo.id  %}" target="_blank" data-original-title="Ver" {% endif %}{% endfor %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
                                                                                         {% endif %}
                                                                                         {%  if perms.SGI.view_documento %}
-                                                                                        <a class="far fa-custom fa-list-alt" style="padding-left: 10px"  data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Historial (Funcionalidad en Desarrollo)"></a>
+                                                                                        <a class="far fa-custom fa-list-alt" style="padding-left: 10px" {% if documento.version_actual > 1 %} href="javascript:arbolDocumentos('doc_{{ documento.id }}')" {% endif %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Historial"></a>
                                                                                         {% endif %}
                                                                                         {% if perms.SGI.add_archivo %}
                                                                                         <a class="far fa-custom fa-long-arrow-alt-up" style="padding-left: 10px"  href="javascript:abrir_modal_cargar('{% url 'sgi:documentos-cargar' proceso.id  grupo_documento.id documento.id %}');" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Cargar"></a>
@@ -74,6 +74,77 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
+                                                        <ul id="doc_{{ documento.id }}" style="padding-top: 11px; display: none;">
+                                                            {% for hst in historial %}
+                                                                {% if hst.documento == documento %}
+                                                                    <li>
+                                                                        <div class="row" style="padding-left: 12px">
+                                                                            <div class="" style="width: 500px">
+                                                                                <div>
+                                                                                    <div id="panel-1" class="panel" style="display: table-header-group;">
+                                                                                        <div class="panel-container show" style="width: 500px">
+                                                                                            <div class="panel-content">
+                                                                                                 <div class="row">
+                                                                                                    <div class="col-md-11">
+                                                                                                        {{ documento.codigo }} {{ documento.nombre }}  v{{ hst.version }}
+                                                                                                    </div>
+                                                                                                    <div class="col-md-1">
+                                                                                                        <a class="far fa-custom fa-caret-square-down" href="javascript:arbolDocumentos('arc_{{ hst.id }}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Detalles"></a>
+                                                                                                    </div>
+                                                                                                 </div>
+                                                                                            </div>
+                                                                                        </div>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                    <ul id="arc_{{ hst.id }}" style="padding-top: 11px; display: none;">
+                                                                        <li>
+                                                                            <div class="row" style="padding-left: 12px">
+                                                                                <div class="" style="width: 500px">
+                                                                                    <div id="panel-1" class="panel">
+                                                                                        <div class="panel-container show" style="width: 500px">
+                                                                                            <div class="panel-content">
+                                                                                                <h5>
+                                                                                                    <small class="mt-0 mb-1 text-muted">
+                                                                                                        <b>Fecha del Documento: </b> {{ hst.fecha_documento }}
+                                                                                                    </small>
+                                                                                                    <small class="mt-0 mb-1 text-muted">
+                                                                                                        <b>Versión: </b> {{ hst.version }}
+                                                                                                    </small>
+                                                                                                    <small class="mt-0 mb-1 text-muted">
+                                                                                                        <b>Estado del Documento: </b> {{ hst.estado }}
+                                                                                                    </small>
+                                                                                                </h5>
+                                                                                                <br>
+                                                                                                <h4>Resultados de Aprobación</h4>
+                                                                                                {% for res in resultados %}
+                                                                                                    {% if res.archivo.id == hst.id %}
+                                                                                                        <h5 style="padding-left: 10px">
+                                                                                                            <small class="mt-0 mb-1 text-muted">
+                                                                                                                <b>Aprobación: </b> {{ res.usuario.get_full_name }}
+                                                                                                            </small>
+                                                                                                            <small class="mt-0 mb-1 text-muted">
+                                                                                                                <b>Estado: </b> {{ res.estado }}
+                                                                                                            </small>
+                                                                                                            <small class="mt-0 mb-1 text-muted">
+                                                                                                                <b>Comentarios: </b> {{ res.comentario }}
+                                                                                                            </small>
+                                                                                                        </h5>
+                                                                                                        <br>
+                                                                                                    {% endif %}
+                                                                                                {% endfor %}
+                                                                                            </div>
+                                                                                        </div>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </li>
+                                                                    </ul>
+                                                                    </li>
+                                                                {% endif %}
+                                                            {% endfor %}
+                                                        </ul>
                                                         </li>
                                                     {% endif %}
                                                 {% endfor %}
