--- a/SGI/templates/SGI/documentos/index.html
+++ b/SGI/templates/SGI/documentos/index.html
@@ -55,7 +55,7 @@
                                                                                         {%  if perms.SGI.view_archivo %}
                                                                                         <a class="far fa-custom fa-eye" style="padding-left: 10px; text-decoration: none !important;" {% for archivo in archivos %}{% if documento == archivo.documento %}href="{% url 'sgi:documentos-ver' archivo.id  %}" target="_blank" data-original-title="Ver" {% endif %}{% endfor %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
                                                                                         {% endif %}
-                                                                                        {%  if perms.SGI.view_documento %}
+                                                                                        {%  if perms.SGI.change_documento %}
                                                                                         <a class="far fa-custom fa-list-alt" style="padding-left: 10px" {% if documento.version_actual > 1 %} href="javascript:arbolDocumentos('doc_{{ documento.id }}')" {% endif %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Historial"></a>
                                                                                         {% endif %}
                                                                                         {% if perms.SGI.add_archivo %}
