--- a/SGI/templates/SGI/documentos/index.html
+++ b/SGI/templates/SGI/documentos/index.html
@@ -36,36 +36,36 @@
                                         <li>
                                             <span class="col-md-4"><i class="fa fa-lg fa-file-alt"></i> {{ grupo_documento }}</span>
                                             {% if perms.SGI.add_documento %}
-                                            <a class="far fa-custom fa-file-plus" style="padding-left: 10px"   href="{% url 'SGI:documentos-crear' proceso.id  grupo_documento.id%}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Crear documento"></a>
+                                            <a class="far fa-custom fa-file-plus p-l-10" href="{% url 'SGI:documentos-crear' proceso.id  grupo_documento.id%}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Crear documento"></a>
                                             {% endif %}
                                             <ul>
                                                 {% for documento in documentos %}
                                                     {% if documento.grupo_documento_id == grupo_documento.id %}
                                                         <li style="display: none">
-                                                            <div class="row" style="padding-left: 12px">
+                                                            <div class="row p-l-12">
                                                                 <div>
                                                                     <div id="panel-1" class="panel" style="display: table-header-group;">
-                                                                        <div class="panel-container show" style="width: 500px">
+                                                                        <div class="panel-container show w-500">
                                                                             <div class="panel-content">
                                                                                 <div class="row">
                                                                                     <div class="col-md-8">
                                                                                     {{ documento }}
                                                                                     </div>
-                                                                                    <div class="col-md-4" style="padding: 0px">
+                                                                                    <div class="col-md-4" style="padding: 0">
                                                                                         {%  if perms.SGI.view_archivo %}
-                                                                                        <a class="far fa-custom fa-eye" style="padding-left: 10px; text-decoration: none !important;" {% for archivo in archivos %}{% if documento == archivo.documento %}href="{% url 'sgi:documentos-ver' archivo.id  %}" target="_blank" data-original-title="Ver" {% endif %}{% endfor %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
+                                                                                        <a class="far fa-custom fa-eye p-l-10" style="text-decoration: none !important;" {% for archivo in archivos %}{% if documento == archivo.documento %}href="{% url 'sgi:documentos-ver' archivo.id  %}" target="_blank" data-original-title="Ver" {% endif %}{% endfor %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
                                                                                         {% endif %}
                                                                                         {%  if perms.SGI.change_documento %}
-                                                                                        <a class="far fa-custom fa-list-alt" style="padding-left: 10px" {% if documento.version_actual > 1 %} href="javascript:arbolDocumentos('doc_{{ documento.id }}')" {% endif %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Historial"></a>
+                                                                                        <a class="far fa-custom fa-list-alt p-l-10" {% if documento.version_actual > 1 %} href="javascript:arbolDocumentos('doc_{{ documento.id }}')" {% endif %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Historial"></a>
                                                                                         {% endif %}
                                                                                         {% if perms.SGI.add_archivo %}
-                                                                                        <a class="far fa-custom fa-long-arrow-alt-up" style="padding-left: 10px"  href="javascript:abrir_modal_cargar('{% url 'sgi:documentos-cargar' proceso.id  grupo_documento.id documento.id %}');" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Cargar"></a>
+                                                                                        <a class="far fa-custom fa-long-arrow-alt-up p-l-10" href="javascript:abrir_modal_cargar('{% url 'sgi:documentos-cargar' proceso.id  grupo_documento.id documento.id %}');" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Cargar"></a>
                                                                                         {% endif %}
                                                                                         {% if perms.SGI.change_documento %}
-                                                                                        <a class="far fa-custom fa-edit" style="padding-left: 10px"  href="{% url 'sgi:documentos-editar' proceso.id  grupo_documento.id documento.id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
+                                                                                        <a class="far fa-custom fa-edit p-l-10" href="{% url 'sgi:documentos-editar' proceso.id  grupo_documento.id documento.id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
                                                                                         {% endif %}
                                                                                         {% if perms.SGI.delete_documento %}
-                                                                                        <a class="far fa-custom fa-trash-alt color-danger-900" style="padding-left: 10px" id="eliminar_{{ documento.id }}" href="javascript:void(0);"  onclick="fConfirmarEliminar({{ documento.id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
+                                                                                        <a class="far fa-custom fa-trash-alt color-danger-900 p-l-10" id="eliminar_{{ documento.id }}" href="javascript:void(0);"  onclick="fConfirmarEliminar({{ documento.id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
                                                                                         {% endif %}
                                                                                     </div>
                                                                                 </div>
@@ -74,23 +74,23 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                        <ul id="doc_{{ documento.id }}" style="padding-top: 11px; display: none;">
+                                                        <ul id="doc_{{ documento.id }}" class="p-l-11" style="display: none;">
                                                             {% for hst in historial %}
                                                                 {% if hst.documento == documento %}
                                                                     <li>
-                                                                        <div class="row" style="padding-left: 12px">
-                                                                            <div class="" style="width: 500px">
+                                                                        <div class="row p-l-12">
+                                                                            <div class="w-500">
                                                                                 <div>
                                                                                     <div id="panel-1" class="panel" style="display: table-header-group;">
-                                                                                        <div class="panel-container show" style="width: 500px">
+                                                                                        <div class="panel-container show w-500">
                                                                                             <div class="panel-content">
                                                                                                  <div class="row">
                                                                                                     <div class="col-md-10">
                                                                                                         {{ documento.codigo }} {{ documento.nombre }}  v{{ hst.version }} <span class="badge border border-primary text-primary" style="font-size: 70%">{{ hst.estado }}</span>
                                                                                                     </div>
                                                                                                     <div class="col-md-2">
-                                                                                                        <a class="far fa-custom fa-eye" style="padding-left: 10px; text-decoration: none !important;" href="{% url 'sgi:documentos-ver' hst.id  %}" target="_blank" data-original-title="Ver" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
-                                                                                                        <a class="far fa-custom fa-caret-square-down" style="padding-left: 10px;" href="javascript:arbolDocumentos('arc_{{ hst.id }}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Detalles"></a>
+                                                                                                        <a class="far fa-custom fa-eye p-l-10" style="text-decoration: none !important;" href="{% url 'sgi:documentos-ver' hst.id  %}" target="_blank" data-original-title="Ver" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
+                                                                                                        <a class="far fa-custom fa-caret-square-down p-l-10" href="javascript:arbolDocumentos('arc_{{ hst.id }}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Detalles"></a>
                                                                                                     </div>
                                                                                                  </div>
                                                                                             </div>
@@ -99,12 +99,12 @@
                                                                                 </div>
                                                                             </div>
                                                                         </div>
-                                                                    <ul id="arc_{{ hst.id }}" style="padding-top: 11px; display: none;">
+                                                                    <ul id="arc_{{ hst.id }}" class="p-l-11" style="display: none;">
                                                                         <li>
-                                                                            <div class="row" style="padding-left: 12px">
-                                                                                <div class="" style="width: 500px">
+                                                                            <div class="row p-l-12">
+                                                                                <div class="w-500">
                                                                                     <div id="panel-1" class="panel">
-                                                                                        <div class="panel-container show" style="width: 500px">
+                                                                                        <div class="panel-container show w-500">
                                                                                             <div class="panel-content">
                                                                                                 <h5>
                                                                                                     <small class="mt-0 mb-1 text-muted">
@@ -122,7 +122,7 @@
                                                                                                 <h4>Resultados de Aprobación</h4>
                                                                                                     {% for res in resultados %}
                                                                                                         {% if res.archivo.id == hst.id %}
-                                                                                                            <h5 style="padding-left: 10px">
+                                                                                                            <h5 class="p-l-10">
                                                                                                                 <small class="mt-0 mb-1 text-muted">
                                                                                                                     <b>Aprobación: </b> {{ res.usuario.get_full_name }}
                                                                                                                 </small>
